--- a/Cinema.UI/Cinema.UI.csproj
+++ b/Cinema.UI/Cinema.UI.csproj
@@ -7,4 +7,13 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BaseServices\BaseServices.csproj" />
+    <ProjectReference Include="..\Cinema.Business\Cinema.Business.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
