Habilitado warning de comentarios XML, eliminado proyecto Testing y agregado proyecto de pruebas unitarias en su lugar.

--- a/Cinema.DAL/Cinema.DAL.csproj
+++ b/Cinema.DAL/Cinema.DAL.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Factory\" />
-    <Folder Include="Repository\Txt\" />
   </ItemGroup>
 
   <ItemGroup>
