Implementacion de ABM de peliculas. Implementado uso de objetos anonimos como parametros para SQL.

--- a/Cinema.Business/Cinema.Business.csproj
+++ b/Cinema.Business/Cinema.Business.csproj
@@ -6,4 +6,9 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Cinema.DAL\Cinema.DAL.csproj" />
+    <ProjectReference Include="..\Cinema.Domain\Cinema.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
