--- a/Cinema.UI/App.config
+++ b/Cinema.UI/App.config
@@ -49,20 +49,20 @@
   <connectionStrings>
     <!--<add name="MainConString" connectionString="Data Source=DESKTOP-46U4QED\SQLEXPRESS;Initial Catalog=AnuncioDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
     <add name="SqlLogConnString" connectionString="Data Source=DESKTOP-46U4QED\SQLEXPRESS;Initial Catalog=LogDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  /><add name="MainConString" connectionString="Data Source=DESKTOP-46U4QED\SQLEXPRESS;Initial Catalog=AnuncioDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />-->
-    <!--<add name="MainConString" connectionString="Data Source=DESKTOP-JJADIK1;Initial Catalog=AnuncioDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
-    <add name="SqlLogConnString" connectionString="Data Source=DESKTOP-JJADIK1;Initial Catalog=LogDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />-->
-    <add name="MainConString" connectionString="Data Source=DESKTOP-HQRG8JS;Initial Catalog=AnuncioDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
-    <add name="SqlLogConnString" connectionString="Data Source=DESKTOP-HQRG8JS;Initial Catalog=LogDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
+    <add name="MainConString" connectionString="Data Source=DESKTOP-JJADIK1;Initial Catalog=CinemaDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
+    <add name="SqlLogConnString" connectionString="Data Source=DESKTOP-JJADIK1;Initial Catalog=LogDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
+    <!--<add name="MainConString" connectionString="Data Source=DESKTOP-HQRG8JS;Initial Catalog=AnuncioDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
+    <add name="SqlLogConnString" connectionString="Data Source=DESKTOP-HQRG8JS;Initial Catalog=LogDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />-->
   </connectionStrings>
   <appSettings>
-    <add key="Repository" value="DAL.Repository.SqlServer" />
+    <add key="Repository" value="DAL.Repository.Sql" />
     <add key="SqlLogs" value="DAL.Repository.Sql" />
     <add key="FilePath" value="default" />
     <add key="FileLogs" value="default" />
     <add key="BaseSqlServerRepository" value="DAL.Repository.Sql" />
     <!-- default equivale a "<directorio base>\\logs"-->
     <add key="FileRepository" value="DAL.Repository.File" />
-    <add key="SqlServerRepository" value="DAL.Repository.SqlServer" />
+    <add key="SqlServerRepository" value="DAL.Repository.Sql" />
     <add key="JsonRepository" value="DAL.Repository.Json" />
     <add key="LastLang" value="es" />
   </appSettings>
