--- a/BaseServices/BaseServices.csproj
+++ b/BaseServices/BaseServices.csproj
@@ -13,5 +13,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cinema.Domain\Cinema.Domain.csproj" />
+  </ItemGroup>
 	
 </Project>
