Implementacion de logging en base de datos (...)
Se mejoró SqlRepository para permitir una cantidad variable de parametros.
Sql repository (en BaseServices) puede ser configurado para utilizar base de datos de Logs o Cinema
de forma independiente para cada tipo de repositorio.
Se puso en funcionamiento el sistema de lenguaje, ahora traduce botones del menú y utiliza el
delegado refresher con un lambda asignado.

--- a/Cinema.UI/Cinema.UI.csproj
+++ b/Cinema.UI/Cinema.UI.csproj
@@ -21,4 +21,19 @@
     <Folder Include="Banners\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Locale\localization-en.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Locale\localization-es.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Locale\localization-jp.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Locale\supportedlanguages.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
