Avances de sesion de usuario

--- a/Cinema.UI/App.config
+++ b/Cinema.UI/App.config
@@ -64,7 +64,7 @@
     <add key="FileRepository" value="DAL.Repository.File" />
     <add key="SqlServerRepository" value="DAL.Repository.Sql" />
     <add key="JsonRepository" value="DAL.Repository.Json" />
-    <add key="LastLang" value="es" />
+    <add key="LastLang" value="en" />
   </appSettings>
   
   <startup>
