Implementacion de pagina de creacion de tickets

--- a/Cinema.UI/App.config
+++ b/Cinema.UI/App.config
@@ -49,11 +49,12 @@
   <connectionStrings>
     <!--<add name="MainConString" connectionString="Data Source=DESKTOP-46U4QED\SQLEXPRESS;Initial Catalog=AnuncioDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
     <add name="SqlLogConnString" connectionString="Data Source=DESKTOP-46U4QED\SQLEXPRESS;Initial Catalog=LogDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  /><add name="MainConString" connectionString="Data Source=DESKTOP-46U4QED\SQLEXPRESS;Initial Catalog=AnuncioDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />-->
-    <add name="MainConString" connectionString="Data Source=DESKTOP-JJADIK1;Initial Catalog=CinemaDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
+    <!--<add name="MainConString" connectionString="Data Source=DESKTOP-JJADIK1;Initial Catalog=CinemaDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
     <add name="SqlLogConnString" connectionString="Data Source=DESKTOP-JJADIK1;Initial Catalog=LogDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
-    <add name="MasterConnString" connectionString="Data Source=DESKTOP-JJADIK1;Initial Catalog=master;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
-    <!--<add name="MainConString" connectionString="Data Source=DESKTOP-HQRG8JS;Initial Catalog=CinemaDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
-    <add name="SqlLogConnString" connectionString="Data Source=DESKTOP-HQRG8JS;Initial Catalog=LogDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />-->
+    <add name="MasterConnString" connectionString="Data Source=DESKTOP-JJADIK1;Initial Catalog=master;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />-->
+    <add name="MainConString" connectionString="Data Source=DESKTOP-HQRG8JS;Initial Catalog=CinemaDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
+    <add name="SqlLogConnString" connectionString="Data Source=DESKTOP-HQRG8JS;Initial Catalog=LogDB;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
+    <add name="MasterConnString" connectionString="Data Source=DESKTOP-HQRG8JS;Initial Catalog=master;Integrated Security=True;Encrypt=true;TrustServerCertificate=true"  />
   </connectionStrings>
   <appSettings>
     <add key="Repository" value="DAL.Repository.Sql" />
@@ -65,7 +66,7 @@
     <add key="FileRepository" value="DAL.Repository.File" />
     <add key="SqlServerRepository" value="DAL.Repository.Sql" />
     <add key="JsonRepository" value="DAL.Repository.Json" />
-    <add key="LastLang" value="es" />
+    <add key="LastLang" value="en" />
   </appSettings>
   
   <startup>
